# algoseek-connector

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: integration-tests.yml  main.yml  pr.yml  publish.yml  release-please.yaml  unit-test.yml  unit-tests.yml
algoseek_connector/: __version__.py  expressions.py  functions.py  operators.py  resources.py  sessions.py
docs/: api.rst  conf.py  developers.rst  index.rst
docs/algoseek_connector/: api.rst  tutorials.rst
docs/algoseek_connector/api/: dataset.rst  protocols.rst  settings.rst  utils.rst
docs/algoseek_connector/tutorials/: configuration.rst  datasets.rst  sql.rst
docs/tutorials/: configuration.rst  datasets.rst  sql.rst
examples/: GettingStarted.ipynb  getting-started-ardadb.ipynb  getting-started-s3.ipynb  settings.ipynb  settings.py
old_tests/: config.py  mock_session.py  test_expressions.py  test_literal.py  test_select.py  test_session.py
src/algoseek_connector/: __init__.py  base.py  config.py  dataset_api.py  default-config.toml  expressions.py  functions.py  manager.py  metadata_api.py  models.py  operators.py  resources.py  sessions.py  settings.py  utils.py
src/algoseek_connector/clickhouse/: __init__.py  base.py  client.py  metadata_api.py  resources.py  sqla_table.py
src/algoseek_connector/s3/: client.py  downloader.py  metadata_api.py
tests/: README.md  config.py  conftest.py  mock_session.py  test_column.py  test_data_resource.py  test_datagroup.py  test_dataset.py  test_expressions.py  test_functions.py  test_literal.py  test_select.py  test_session.py
tests/integration/: test_base_metadata_api.py  test_connection_to_dataset_api.py  test_manager.py
tests/integration/clickhouse/: test_clickhouse_client.py  test_metadata_api_data_from_api.py  test_query_data.py  test_resources.py
tests/integration/s3/: test_client.py  test_download_from_s3.py  test_downloader.py
tests/learning/: iris.csv  test_boto3_download_from_s3.py  test_download_from_s3.py  test_parse_dates.py
tests/unit/: test_base.py  test_config.py  test_utils.py
tests/unit/clickhouse/: test_base.py  test_metadata_api.py  test_query_creation.py  test_sqla_table.py
tests/unit/s3/: test_client.py  test_downloader.py  test_s3_metadata_api.py
