[tool.poetry]
name = "algoseek-connector"
version = "1.0.2"
description = "A wrapper library for ORM-like SQL builder and executor"
authors = [
    "Taras Kuzyo <taras@algoseek.com>",
    "Gabriel Riquelme <gabrielr@algoseek.com>"
]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "algoseek_connector", from = "src"}]
include = ["LICENSE", "NOTICE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
clickhouse-driver = "^0.2.6"
requests = "^2.31.0"
pandas = "^2.0.2"
clickhouse-sqlalchemy = "^0.2.4"
sqlalchemy = "^1.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"
flake8-docstrings = "^1.7.0"
pytest-cov = "^4.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
]

[tool.isort]
profile = "black"
