[project]
name = "algoseek-connector"
version = "2.1.5"
authors = [{ name = "Algoseek", email = "support@algoseek.com" }]
readme = "README.md"
description = "A library for fetching Algoseek datasets using SQL-like queries"
license = { text = "Apache-2.0" }
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.2",
    "clickhouse-sqlalchemy>=0.2.4",
    "sqlalchemy==1.4.*",
    "clickhouse-connect>=0.6.6",
    "sqlparse>=0.5.0",
    "boto3>=1.28.11",
    "botocore>=1.31.12",
    "tomli>=2.0.1",
    "pendulum>=3.0.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
]

[project.urls]
Documentation = "https://algoseek-connector.readthedocs.io/"
Repository = "https://github.com/algoseekgit/algoseek-connector/"
Issues = "https://github.com/algoseekgit/algoseek-connector/issues"
Changelog = "https://github.com/algoseekgit/algoseek-connector/blob/master/CHANGELOG.md"

[project.optional-dependencies]

dev = [
    "boto3-stubs>=1.34.30",
    "moto>=5.0.13",
    "mypy-boto3>=1.34.31",
    "mypy-boto3-s3>=1.34.14",
    "mypy-boto3-sts>=1.34.0",
    "pre-commit>=4.0.0",
    "pyright>=1.1.377",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.3",
    "ipdb>=0.13.13",
    "commitizen>=3.29.0",
    "notebook>=7.0.0",
]

docs = [
    "sphinx>=7.4.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-toggleprompt>=0.5.2",
    "numpydoc>=1.8.0",
    "sphinx-design>=0.6.1",
    "autodoc-pydantic>=2.2.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/algoseek_connector"]

[tool.ruff]
line-length = 119
lint.select = ["F", "W", "E", "I", "D"]
lint.ignore = ["D105", "D107", "D203", "D212", "D213"]
exclude = ["docs/"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "class .*\\bProtocol\\):"]

[tool.pytest.ini_options]
testpaths = ["src/tests/unit"]
